feat(home): add home page with pagination

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -11,11 +11,14 @@
 
     "auth.button.signin": "Sign In",
     "auth.button.register": "Register",
+    "auth.button.logout": "Logout",
 
     "auth.ask.already-registered": "Already registered?",
     "auth.ask.do-not-have-account": "Don't have an account?",
 
     "error.field.invalid-email": "The entered email format is invalid",
     "error.field.invalid-password": "The entered password is too weak. Please use a password with at least 6 characters and at most 12 characters",
-    "error.field.invalid-age": "The entered age does not meet our policy. You must be at least 18 years old and no older than 99 years old"
+    "error.field.invalid-age": "The entered age does not meet our policy. You must be at least 18 years old and no older than 99 years old",
+     
+    "card.info.likes": "Likes"
 }
